...
            
            Button(
                action: { startGameWithPlayerCount(players.count) },
                label: { Image(systemName: "play.fill") }
            )
            .buttonStyle(ImpostorButtonStyle())
            .accessibilityIdentifier("startGame")

            bottomBar
        }
        .scenePadding()
        .background(Image("background"))
        .onAppear {
...
        .frame(maxWidth: .infinity)
    }
    
    var bottomBar: some View {
        // Bottom actions
        HStack(spacing: 12) {
            ImpostorButton(systemImageName: "questionmark") {
                AudioManager.shared.playSoundEffect(named: "buttonPress")
                showHelpScene = true
            }
            
            ImpostorButton(systemImageName: "trash") {
                AudioManager.shared.playSoundEffect(named: "buttonPress")
...
