...
                AudioManager.shared.playSoundEffect(named: "peek")
                showingSecretWord = true
            }, label: {
                Image(systemName: "eye")
            })
            .buttonStyle(ImpostorButtonStyle())
            .accessibilityIdentifier("seeSecretWord")
            
            Spacer()
            
            image
                .resizable()
                .scaledToFill()
...
